# Project-software-engineering

./: README.md
.github/workflows/: c-cpp.yml
Verkeerssimulatie/: Baan.cpp  Baan.h  CMakeLists.txt  CMakeLists2.txt  DesignByContract.h  NullPointer.h  System.cpp  System.h  VerkeerssimulatieTest.cpp  Verkeersteken.cpp  Verkeersteken.h  Voertuig.cpp  Voertuig.h  XmlParser.cpp  XmlParser.h  aangepast.txt  main.cpp  ongebruikteCode.h
Verkeerssimulatie/Tests/: BaanTest.cpp  FileCompareTest.cpp  SystemDebug.cpp  SystemDebug.h  SystemTest.cpp  VerkeerssimulatieTest.cpp  VerkeerstekenTest.cpp  VoertuigTest.cpp  XmlParserTest.cpp
Verkeerssimulatie/testHeaderFiles/: BaanTest.cpp
Verkeerssimulatie/workingDirectory/: AA.txt  BusTest.xml  DuplicateBanen4Banen4Duplicaten.xml  Error.txt  Friday_Night.txt  Friday_Night.xml  GetterAndSetterTester.xml  Holiday.txt  Holiday.xml  Monday_Morning.txt  Monday_Morning.xml  OneWegenNetwerk.xml  SYSTEMfilterVehiclesTest.xml  SYSTEMgetBanenEnWegenNetwerkTest.xml  SYSTEMinitializeBaanVerbindingObjectsTest.xml  SYSTEMinitializeVehicleBaanObjectTest.xml  SYSTEMsimulateTest.xml  Test_Result.txt  Traffic_Jam.txt  Traffic_Jam.xml  VerkeerssimulatieTest.cpp  Wednesday_Night.txt  Wednesday_Night.xml  Wegen_en_voertuigen.txt  Wegen_en_voertuigen.xml  Wegennetwerk.xml  Wrong.xml  dummyTest.txt  grafischeOutput.txt  newTypesTest.xml  verkeersTekenVB.xml
Verkeerssimulatie/workingDirectory/FileCompare/: TwoCities.txt  Whitman.txt  WhitmanLong.txt  WhitmanShort.txt
Verkeerssimulatie/workingDirectory/Parser/: AllMurphy.xml  BaanLengteFormat.txt  BaanLengteFormat.xml  BaanLengteNULL.txt  BaanLengteNULL.xml  BaanMurphy.txt  BaanMurphy.xml  BaanNaamNULL.txt  BaanNaamNULL.xml  BaanRijstrokenFormat.txt  BaanRijstrokenFormat.xml  BaanRijstrokenFormatMin.txt  BaanRijstrokenFormatMin.xml  BaanRijstrokenNULL.txt  BaanRijstrokenNULL.xml  BaanSnelheidslimietFormat.txt  BaanSnelheidslimietFormat.xml  BaanSnelheidslimietNULL.txt  BaanSnelheidslimietNULL.xml  BaanVerbindingNULL.txt  BaanVerbindingNULL.xml  DuplicateBanen4Banen4Duplicaten.xml  EmptyRootTag.xml  Error.txt  GetterAndSetterTester.xml  SYSTEMgetBanenEnWegenNetwerkTest.xml  VerkeerstekenBaanFormat.txt  VerkeerstekenBaanFormat.xml  VerkeerstekenBaanNULL.txt  VerkeerstekenBaanNULL.xml  VerkeerstekenMurphy.txt  VerkeerstekenMurphy.xml  VerkeerstekenPositieFormat.txt  VerkeerstekenPositieFormat.xml  VerkeerstekenPositieFormatMin.txt  VerkeerstekenPositieFormatMin.xml  VerkeerstekenPositieNULL.txt  VerkeerstekenPositieNULL.xml  VerkeerstekenSnelheidslimietFormat.txt  VerkeerstekenSnelheidslimietFormat.xml  (+32 more)
Verkeerssimulatie/workingDirectory/SystemOutput/: 1stTest.xml  2ndTest.txt  2ndTest.xml  BusInc.txt  BusInc.xml  BusTest.txt  BusTest.xml  Holiday.txt  MondayMorning.txt  MondayMorning.xml  MotorFiestInc.txt  MotorFiestInc.xml  RoadWork.txt  RoadWork.xml  RushHour.txt  RushHour.xml
XML-Parser/: dummy.txt
workingDirectory/: Wegen_en_voertuigen.xml  Wegennetwerk.xml
